--- a/Quiz/Instruction_jee.html
+++ b/Quiz/Instruction_jee.html
@@ -339,7 +339,7 @@
         <div id="copyright">
             <div class="container">
                 <div class="col-md-12">
-                    <p class="text-center">&copy; 2021 JEENEETBOOKS.IN Mighty Dot.</p>
+                    <p class="text-center">&copy; 2021 JEE IIT.</p>
                 </div>
             </div>
         </div>
