Instruction_ugc.html

--- a/Quiz/Instruction_ugc.html
+++ b/Quiz/Instruction_ugc.html
@@ -250,7 +250,7 @@
         <div id="copyright">
             <div class="container">
                 <div class="col-md-12">
-                    <p class="text-center">&copy; 2021 JEENEETBOOKS.IN Mighty Dot.</p>
+                    <p class="text-center">&copy; 2021 JEE IIT Mighty Dot.</p>
                 </div>
             </div>
         </div>
