JEEMain_login.html

--- a/JEEMain_login.html
+++ b/JEEMain_login.html
@@ -33,7 +33,7 @@
                 <div class="navbar navbar-default yamm" role="navigation" id="navbar">
                     <div class="container">
                         <div class="navbar-header">
-                            <a href="https://jeeneetbooks.in" class="navbar-brand home">
+                            <a href="https://WWW.T.ME/BEAST3713" class="navbar-brand home">
                                 <img src="Quiz/img/logo.png" alt="Brand logo" class="img-responsive">
                             </a>
                         </div>
@@ -109,7 +109,7 @@
             <div id="copyright">
                 <div class="container">
                     <div class="col-md-12">
-                        <p class="text-center"><a href="https://jeeneetbooks.in">&copy; 2021 jeeneetbooks.in CrackJEENEET</a></p>
+                        <p class="text-center"><a href="https://WWW.T.ME/BEAST3713">&copy; 2021 T.ME/BEAST3713 CrackJEENEET</a></p>
                     </div>
                 </div>
             </div>
