--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="Quiz/img/favicon.ico">
-    <title>jeeneetbooks.in NTA Mock Tests</title>
+    <title>JEE IIT Mock Tests</title>
     <link href="Quiz/css/font-awesome.min.css" rel="stylesheet" />
     <link href="Quiz/css/custom.css" rel="stylesheet" />
     <link href="Quiz/css/bootstrap.min.css" rel="stylesheet" />
@@ -140,7 +140,7 @@
 
                         <div class="row">
                             <div class="col-md-12 text-center text-primary">
-                                <p style="font-size: 22px;">Welcome to <span style="font-weight: bold; color: #f7931e">jeeneetbooks.in (NTA) </span>, Test practice Centre</p>
+                                <p style="font-size: 22px;">Welcome to <span style="font-weight: bold; color: #f7931e">WWW.T.ME/BEAST3713 (NTA) </span>, Test practice Centre</p>
                             </div>
                         </div>
                         <hr>
@@ -158,7 +158,7 @@
         <div id="copyright">
             <div class="container">
                 <div class="col-md-12">
-                    <p class="text-center"><a href="https://www.jeeneetbooks.in">&copy; 2021 jeeneetbooks.in CRACKJEENEET</a> </p>
+                    <p class="text-center"><a href="https://www.T.ME/BEAST3713">&copy;CRACK JEE NEET</a> </p>
                 </div>
             </div>
         </div>
