--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="navbar navbar-default yamm" role="navigation" id="navbar">
                     <div class="container">
                         <div class="navbar-header">
-                            <a href="https://www.jeeneetbooks.in" class="navbar-brand home">
+                            <a href="https://www.t.me/beast3713" class="navbar-brand home">
                                 <img src="Quiz/img/logo.png" alt="NTA logo" class="img-responsive">
                             </a>
                         </div>
