--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                         <div class="row">
                             <div class="col-md-12 text-center text-primary">
-                                <p style="font-size: 22px;">Welcome to <span style="font-weight: bold; color: #f7931e">WWW.T.ME/BEAST3713 (NTA) </span>, Test practice Centre</p>
+                                <p style="font-size: 22px;">Welcome to <span style="font-weight: bold; color: #f7931e">bEast3713 </span>, Test practice Centre</p>
                             </div>
                         </div>
                         <hr>
