--- a/JEEMain_login.html
+++ b/JEEMain_login.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="Quiz/img/favicon.ico">
-    <title>NTA</title>
+    <title>Jee Main</title>
     <link href="Quiz/css/font-awesome.min.css" rel="stylesheet" />
     <link href="Quiz/css/custom.css" rel="stylesheet" />
     <link href="Quiz/css/bootstrap.min.css" rel="stylesheet" />
